# yew_flight_indicators

./: Cargo.toml  LICENSE-MIT  Makefile  README.md  commit.sh
.github/workflows/: build.yml
pages/: Cargo.toml  Trunk.prod.toml  index.html
pages/src/: main.rs
src/: air_speed.rs  air_speed_indicator.rs  airspeed_indicator.rs  airspeed_indicator2.rs  altimeter.rs  altimeter2.rs  altitude_indicator.rs  attitude.rs  attitude2.rs  attitude_indicator.rs  attitude_indicator2.rs  heading.rs  heading_indicator.rs  heading_indicator2.rs  lib.rs  turn_coordinator.rs  turn_coordinator2.rs  variometer.rs  variometer2.rs
src/svg_data_uri/: attitude_indicator_pitch.svg.raw
src/svg_part_data_uri/: attitude_indicator_pitch.svg.raw
