[package]
name = "yew_flight_indicators"
version = "0.2.1"
edition = "2021"
authors = ["Finn Bear"] # see README.md for additional acknowledgements
license = "MIT OR Apache-2.0"
repository = "https://github.com/finnbear/yew_flight_indicators/"
description = "Flight indicators for Yew websites"
exclude = ["/Makefile", "/svg/", "/pages/", "/.vscode/", "/.github/"]

[dependencies]
stylist = { version = "0.13.0", features = ["yew"] }
yew = "0.21.0"
