[package]
name = "pages"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
yew_flight_indicators = { path = ".." }
yew = { version = "0.23", features = ["csr"] }
web-sys = "0.3"
yew-hooks = "0.6.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = "debuginfo"
